# cmake-wasm

./: .gitignore  CMakeLists.txt  README.md  test.html  wasmer.js
src/: main.c
web/: wasm_wrapper.js
